--- a/src/app/products-list/products-list.page.html
+++ b/src/app/products-list/products-list.page.html
@@ -1,15 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Main</ion-title>
+    <ion-title>ProductsList</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Main</ion-title>
+      <ion-title size="large">ProductsList</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <button [routerLink]="['/products-list']">Products list</button>
 </ion-content>
